# project-navigator-data

./: .gitignore  .gitreview  .zuul.yaml  README.rst  schema.json  setup.cfg  tox.ini  validate.py
releases/bexar/: nova.json
releases/cactus/: nova.json  swift.json
releases/essex/: glance.json
releases/folsom/: glance.json  nova.json
releases/grizzly/: cinder.json  glance.json
releases/havana/: nova.json
releases/juno/: glance.json  nova.json
releases/kilo/: freezer.json  glance.json  nova.json
releases/liberty/: cinder.json  nova.json  sahara.json
releases/mitaka/: cinder.json  dragonflow.json  nova.json
releases/newton/: cinder.json  dragonflow.json  glance.json  keystone.json  magnum.json  manila.json  nova.json  senlin.json
releases/ocata/: cinder.json  dragonflow.json  glance.json  heat.json  manila.json  murano.json  nova.json
releases/pike/: nova.json
releases/queens/: nova.json
